--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=90edf36dd3ee99f90f64e3dbbc5dd295
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="mysql://root@127.0.0.1/Battle_office"
+DATABASE_URL="mysql://root@127.0.0.1/battle_office"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
